--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write .",
-    "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore"
+    "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
+    "type-check": "vue-tsc --noEmit -p tsconfig.json"
   },
   "dependencies": {
     "vue": "^3.3.8",
@@ -25,6 +26,11 @@
     "@eslint/js": "^9.0.0",
     "eslint-plugin-vue": "^9.20.0",
     "prettier": "^3.2.0",
-    "@vue/eslint-config-prettier": "^9.0.0"
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "typescript": "^5.6.3",
+    "vue-tsc": "^2.1.6",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0"
   }
 }
