--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
     "format": "prettier --write .",
     "lint:check": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --ignore-path .gitignore",
-    "type-check": "vue-tsc --noEmit -p tsconfig.json"
+    "type-check": "vue-tsc --noEmit -p tsconfig.json",
+    "test": "vitest",
+    "test:cov": "vitest --coverage"
   },
   "dependencies": {
     "vue": "^3.3.8",
@@ -31,6 +33,12 @@
     "vue-tsc": "^2.1.6",
     "@types/node": "^20.12.12",
     "@typescript-eslint/parser": "^7.18.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0"
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "vitest": "^2.0.5",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vue/test-utils": "^2.4.6",
+    "@testing-library/vue": "^8.1.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "jsdom": "^24.0.0"
   }
 }
