--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -41,31 +41,11 @@ repos:
       - id: ruff
         name: Ruff linter
         description: Run ruff linter
-        args: [--fix, --exit-non-zero-on-fix]
+        args: [--fix, --exit-non-zero-on-fix, --select=I]
         types: [python]
       - id: ruff-format
         name: Ruff formatter
         description: Run ruff formatter
-        types: [python]
-
-  # Black for Python formatting (backup)
-  - repo: https://github.com/psf/black
-    rev: 25.1.0
-    hooks:
-      - id: black
-        name: Black formatter
-        description: Run black formatter
-        language_version: python3
-        types: [python]
-
-  # isort for import sorting
-  - repo: https://github.com/pycqa/isort
-    rev: 6.0.1
-    hooks:
-      - id: isort
-        name: isort import sorter
-        description: Sort imports with isort
-        args: [--profile=black, --line-length=100]
         types: [python]
 
   # Frontend hooks
