--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,31 +14,32 @@
     "test:cov": "vitest --coverage"
   },
   "dependencies": {
-    "vue": "^3.3.8",
-    "vue-router": "^4.2.5",
-    "leaflet": "^1.9.4",
     "axios": "^1.6.0",
     "chart.js": "^4.4.0",
-    "vue-chartjs": "^5.2.0"
+    "chartjs-plugin-annotation": "^3.1.0",
+    "leaflet": "^1.9.4",
+    "vue": "^3.3.8",
+    "vue-chartjs": "^5.2.0",
+    "vue-router": "^4.2.5"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.5.0",
-    "vite": "^5.0.0",
-    "eslint": "^8.57.0",
     "@eslint/js": "^9.0.0",
-    "eslint-plugin-vue": "^9.20.0",
-    "prettier": "^3.2.0",
-    "@vue/eslint-config-prettier": "^9.0.0",
-    "typescript": "^5.6.3",
-    "vue-tsc": "^2.1.6",
-    "@types/node": "^20.12.12",
-    "@typescript-eslint/parser": "^7.18.0",
-    "@typescript-eslint/eslint-plugin": "^7.18.0",
-    "vitest": "^2.0.5",
-    "@vitest/coverage-v8": "^2.0.5",
-    "@vue/test-utils": "^2.4.6",
-    "@testing-library/vue": "^8.1.0",
     "@testing-library/jest-dom": "^6.6.3",
-    "jsdom": "^24.0.0"
+    "@testing-library/vue": "^8.1.0",
+    "@types/node": "^20.12.12",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
+    "@vitejs/plugin-vue": "^4.5.0",
+    "@vitest/coverage-v8": "^2.0.5",
+    "@vue/eslint-config-prettier": "^9.0.0",
+    "@vue/test-utils": "^2.4.6",
+    "eslint": "^8.57.0",
+    "eslint-plugin-vue": "^9.20.0",
+    "jsdom": "^24.0.0",
+    "prettier": "^3.2.0",
+    "typescript": "^5.6.3",
+    "vite": "^5.0.0",
+    "vitest": "^2.0.5",
+    "vue-tsc": "^2.1.6"
   }
 }
