--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.9.4",
     "vue": "^3.3.8",
     "vue-chartjs": "^5.2.0",
+    "vue-i18n": "^9.14.5",
     "vue-router": "^4.2.5"
   },
   "devDependencies": {
