--- a/pixi.toml
+++ b/pixi.toml
@@ -14,6 +14,7 @@ python-multipart = "*"
 sqlalchemy = "*"
 asyncpg = "*"
 boto3 = "*"
+python-dotenv = "*"
 pre-commit = "*"
 
 [feature.dev.dependencies]
@@ -31,8 +32,10 @@ pytest-cov = "*"
 moto = "*"
 
 [tasks]
-start-backend-local = { cmd = "STORAGE_TYPE=local uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
-start-backend-s3 = { cmd = "STORAGE_TYPE=s3 uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
+start-backend-local = { cmd = "ENVIRONMENT=local uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
+start-backend-s3 = { cmd = "ENVIRONMENT=s3 uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
+start-backend-staging = { cmd = "ENVIRONMENT=staging uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
+start-backend-production = { cmd = "ENVIRONMENT=production uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
 start-frontend = { cmd = "npm run dev", cwd = "frontend", depends-on = ["frontend-install"] }
 frontend-install = { cmd = "npm install", cwd = "frontend" }
 frontend-build = { cmd = "npm run build", cwd = "frontend", depends-on = ["frontend-install"] }
