--- a/.gitignore
+++ b/.gitignore
@@ -98,8 +98,7 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
-.env
+# Python virtual environments
 .venv
 env/
 venv/
@@ -203,11 +202,7 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variable files
-.env.development.local
-.env.test.local
-.env.production.local
-.env.local
+# dotenv environment variable files (handled below in Environment files section)
 
 # parcel-bundler cache
 .cache
@@ -293,12 +288,6 @@ elasticsearch-data/
 build/
 dist/
 
-# Environment files
-.env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
 # Database files
 *.db
@@ -314,5 +303,6 @@ scratch/
 mock_gpx/
 
 # Environment files (keep example files for documentation)
-!.env.example
-!.env.*.example
+.env/*
+!.env/.env.example
+!.env/*.example
