--- a/pixi.toml
+++ b/pixi.toml
@@ -32,10 +32,10 @@ pytest-cov = "*"
 moto = "*"
 
 [tasks]
-start-backend-local = { cmd = "ENVIRONMENT=local uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
-start-backend-s3 = { cmd = "ENVIRONMENT=s3 uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
-start-backend-staging = { cmd = "ENVIRONMENT=staging uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
-start-backend-production = { cmd = "ENVIRONMENT=production uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend" }
+start-backend-local = { cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend", env = { ENVIRONMENT = "local" } }
+start-backend-s3 = { cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend", env = { ENVIRONMENT = "s3" } }
+start-backend-staging = { cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend", env = { ENVIRONMENT = "staging" } }
+start-backend-production = { cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000", cwd = "backend", env = { ENVIRONMENT = "production" } }
 start-frontend = { cmd = "npm run dev", cwd = "frontend", depends-on = ["frontend-install"] }
 frontend-install = { cmd = "npm install", cwd = "frontend" }
 frontend-build = { cmd = "npm run build", cwd = "frontend", depends-on = ["frontend-install"] }
