--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -25,6 +25,9 @@ jobs:
       - name: Show pixi version
         run: pixi --version
 
+      - name: Run lint
+        run: pixi run -e dev lint-backend
+
       - name: Create environment file
         run: cp .env/.env.local.example .env/local
 
