--- a/pixi.toml
+++ b/pixi.toml
@@ -3,7 +3,7 @@ name = "cycling-website"
 version = "1.0.0"
 description = "Cycling routes website with GPX management"
 channels = ["conda-forge"]
-platforms = ["osx-arm64", "osx-64", "linux-64", "win-64"]
+platforms = ["osx-arm64", "osx-64", "linux-64"]
 
 [dependencies]
 python = "==3.11"
