--- a/.env/local.example
+++ b/.env/local.example
@@ -10,16 +10,11 @@ LOCAL_STORAGE_ROOT=./scratch/local_storage
 LOCAL_STORAGE_BASE_URL=http://localhost:8000/storage
 
 # Database Configuration
-# PostgreSQL connection string
-# Format: postgresql+asyncpg://username:password@host:port/database_name
-DATABASE_URL=postgresql+asyncpg://postgres:your_password_here@localhost:5432/cycling
-
-# Database connection details (alternative to DATABASE_URL)
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=cycling
-# DB_USER=postgres
-# DB_PASSWORD=your_password_here
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=cycling
+DB_USER=postgres
+DB_PASSWORD=your_password_here
 
 # AWS Configuration (not needed for local storage, but included for completeness)
 # AWS_ACCESS_KEY_ID=your_access_key_here
