--- a/.env/s3.example
+++ b/.env/s3.example
@@ -12,16 +12,11 @@ AWS_S3_BUCKET=your_bucket_name
 AWS_REGION=us-east-1
 
 # Database Configuration
-# PostgreSQL connection string
-# Format: postgresql+asyncpg://username:password@host:port/database_name
-DATABASE_URL=postgresql+asyncpg://postgres:your_password_here@localhost:5432/cycling
-
-# Database connection details (alternative to DATABASE_URL)
-# DB_HOST=localhost
-# DB_PORT=5432
-# DB_NAME=cycling
-# DB_USER=postgres
-# DB_PASSWORD=your_password_here
+DB_HOST=localhost
+DB_PORT=5432
+DB_NAME=cycling
+DB_USER=postgres
+DB_PASSWORD=your_password_here
 
 # Logging
 LOG_LEVEL=INFO
