--- a/.env/staging.example
+++ b/.env/staging.example
@@ -12,16 +12,11 @@ AWS_S3_BUCKET=your_staging_bucket_name
 AWS_REGION=us-east-1
 
 # Database Configuration
-# PostgreSQL connection string for staging environment
-# Format: postgresql+asyncpg://username:password@host:port/database_name
-DATABASE_URL=postgresql+asyncpg://staging_user:your_staging_password_here@staging-db-host:5432/cycling_staging
-
-# Database connection details (alternative to DATABASE_URL)
-# DB_HOST=staging-db-host
-# DB_PORT=5432
-# DB_NAME=cycling_staging
-# DB_USER=staging_user
-# DB_PASSWORD=your_staging_password_here
+DB_HOST=staging-db-host
+DB_PORT=5432
+DB_NAME=cycling_staging
+DB_USER=staging_user
+DB_PASSWORD=your_staging_password_here
 
 # Logging
 LOG_LEVEL=INFO
