--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -28,11 +28,26 @@ jobs:
       - name: Run lint
         run: pixi run -e dev lint-backend
 
-      - name: Create environment file
-        run: cp .env/.env.local.example .env/local
+      - name: Create environment file for CI
+        run: |
+          mkdir -p .env
+          cat > .env/local << EOF
+          ENVIRONMENT=local
+          STORAGE_TYPE=${{ vars.STORAGE_TYPE || 'local' }}
+          LOCAL_STORAGE_ROOT=${{ vars.LOCAL_STORAGE_ROOT || './scratch/local_storage' }}
+          LOCAL_STORAGE_BASE_URL=${{ vars.LOCAL_STORAGE_BASE_URL || 'http://localhost:8000/storage' }}
+          DB_HOST=${{ vars.DB_HOST || 'localhost' }}
+          DB_PORT=${{ vars.DB_PORT || '5432' }}
+          DB_NAME=${{ vars.DB_NAME || 'cycling_test' }}
+          DB_USER=${{ vars.DB_USER || 'postgres' }}
+          DB_PASSWORD=${{ vars.DB_PASSWORD || 'postgres' }}
+          LOG_LEVEL=${{ vars.LOG_LEVEL || 'INFO' }}
+          EOF
 
       - name: Run backend tests with coverage
-        run: pixi run -e dev -- test-backend
+        run: |
+          export ENVIRONMENT=local
+          pixi run -e dev -- test-backend
 
       - name: Upload coverage summary
         if: always()
