--- a/pixi.toml
+++ b/pixi.toml
@@ -32,25 +32,9 @@ pytest = "*"
 pytest-cov = "*"
 moto = "*"
 
-[tasks.start-backend-local]
+[tasks.start-backend]
 cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
 cwd = "backend"
-env = { ENVIRONMENT = "local" }
-
-[tasks.start-backend-s3]
-cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
-cwd = "backend"
-env = { ENVIRONMENT = "s3" }
-
-[tasks.start-backend-staging]
-cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
-cwd = "backend"
-env = { ENVIRONMENT = "staging" }
-
-[tasks.start-backend-production]
-cmd = "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000"
-cwd = "backend"
-env = { ENVIRONMENT = "production" }
 
 [tasks.start-frontend]
 cmd = "npm run dev"
