--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -31,17 +31,17 @@ jobs:
       - name: Create environment file for CI
         run: |
           mkdir -p .env
-          cat > .env/local << EOF
-          ENVIRONMENT=local
-          STORAGE_TYPE=${{ vars.STORAGE_TYPE || 'local' }}
-          LOCAL_STORAGE_ROOT=${{ vars.LOCAL_STORAGE_ROOT || './scratch/local_storage' }}
-          LOCAL_STORAGE_BASE_URL=${{ vars.LOCAL_STORAGE_BASE_URL || 'http://localhost:8000/storage' }}
-          DB_HOST=${{ vars.DB_HOST || 'localhost' }}
-          DB_PORT=${{ vars.DB_PORT || '5432' }}
-          DB_NAME=${{ vars.DB_NAME || 'cycling_test' }}
-          DB_USER=${{ vars.DB_USER || 'postgres' }}
-          DB_PASSWORD=${{ vars.DB_PASSWORD || 'postgres' }}
-          LOG_LEVEL=${{ vars.LOG_LEVEL || 'INFO' }}
+          cat > .env/database << EOF
+          DB_HOST=${{ vars.DB_HOST }}
+          DB_PORT=${{ vars.DB_PORT }}
+          DB_NAME=${{ vars.DB_NAME }}
+          DB_USER=${{ vars.DB_USER }}
+          DB_PASSWORD=${{ vars.DB_PASSWORD  }}
+          EOF
+          cat > .env/storage << EOF
+          STORAGE_TYPE=${{ vars.STORAGE_TYPE }}
+          LOCAL_STORAGE_ROOT=${{ vars.LOCAL_STORAGE_ROOT }}
+          LOCAL_STORAGE_BASE_URL=${{ vars.LOCAL_STORAGE_BASE_URL }}
           EOF
 
       - name: Run backend tests with coverage
