--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -2,9 +2,9 @@ name: Backend Tests
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 permissions:
   contents: read
@@ -31,14 +31,14 @@ jobs:
       - name: Create environment file for CI
         run: |
           mkdir -p .env
-          echo "DB_HOST=${{ vars.DB_HOST }}" >> .env/database
+          echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env/database
           echo "DB_PORT=${{ vars.DB_PORT }}" >> .env/database
-          echo "DB_NAME=${{ vars.DB_NAME }}" >> .env/database
-          echo "DB_USER=${{ vars.DB_USER }}" >> .env/database
-          echo "DB_PASSWORD=${{ vars.DB_PASSWORD }}" >> .env/database
-          echo "STORAGE_TYPE=${{ vars.STORAGE_TYPE }}" >> .env/storage
-          echo "LOCAL_STORAGE_ROOT=${{ vars.LOCAL_STORAGE_ROOT }}" >> .env/storage
-          echo "LOCAL_STORAGE_BASE_URL=${{ vars.LOCAL_STORAGE_BASE_URL }}" >> .env/storage
+          echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env/database
+          echo "DB_USER=${{ secrets.DB_USER }}" >> .env/database
+          echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env/database
+          echo "STORAGE_TYPE=${{ secrets.STORAGE_TYPE }}" >> .env/storage
+          echo "LOCAL_STORAGE_ROOT=${{ secrets.LOCAL_STORAGE_ROOT }}" >> .env/storage
+          echo "LOCAL_STORAGE_BASE_URL=${{ secrets.LOCAL_STORAGE_BASE_URL }}" >> .env/storage
 
       - name: Setup database
         run: pixi run pg-setup
