--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -32,7 +32,7 @@ jobs:
         run: |
           mkdir -p .env
           echo "DB_HOST=${{ secrets.DB_HOST }}" >> .env/database
-          echo "DB_PORT=${{ vars.DB_PORT }}" >> .env/database
+          echo "DB_PORT=${{ secrets.DB_PORT }}" >> .env/database
           echo "DB_NAME=${{ secrets.DB_NAME }}" >> .env/database
           echo "DB_USER=${{ secrets.DB_USER }}" >> .env/database
           echo "DB_PASSWORD=${{ secrets.DB_PASSWORD }}" >> .env/database
@@ -42,6 +42,9 @@ jobs:
 
       - name: Setup database
         run: pixi run pg-setup
+
+      - name: Start backend
+        run: pixi run start-backend
       - name: Run backend tests with coverage
         run: |
           pixi run -e dev -- test-backend
