--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -43,6 +43,9 @@ jobs:
       - name: Setup database
         run: pixi run pg-setup
 
+      - name: Debug
+        run: pixi run -e dev -- psql -l
+
       - name: Start backend
         run: pixi run start-backend
       - name: Run backend tests with coverage
