--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -55,5 +55,11 @@ jobs:
           echo "Coverage summary:" >> $GITHUB_STEP_SUMMARY
           pixi run -e dev -- test-backend | sed -n '/^=============================== tests coverage/,/^[0-9].*passed/p' >> $GITHUB_STEP_SUMMARY
 
+      - name: Stop backend
+        run: |
+          # Kill any process running on port 8000 (backend server)
+          lsof -ti:8000 | xargs -r kill -9
+        if: always()
+
       - name: Cleanup database
         run: pixi run pg-cleanup
