--- a/.env/storage.example
+++ b/.env/storage.example
@@ -3,7 +3,7 @@
 STORAGE_TYPE=local
 
 # For local storage:
-LOCAL_STORAGE_ROOT=./scratch/local_storage
+LOCAL_STORAGE_ROOT=../scratch/local_storage
 LOCAL_STORAGE_BASE_URL=http://localhost:8000/storage
 
 # For S3 storage (uncomment and configure if using S3):
