--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -14,11 +14,6 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "types": ["node"]
   },
-  "include": [
-    "src/**/*.ts",
-    "src/**/*.d.ts",
-    "src/**/*.tsx",
-    "src/**/*.vue"
-  ],
+  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
