--- a/pixi.toml
+++ b/pixi.toml
@@ -6,7 +6,7 @@ channels = ["conda-forge"]
 platforms = ["osx-arm64", "osx-64", "linux-64"]
 
 [dependencies]
-python = "==3.11"
+python = "*"
 fastapi = "*"
 uvicorn = "*"
 gpxpy = "*"
