--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cycling-website-frontend",
+  "name": "gravlysite-frontend",
   "version": "1.0.0",
   "type": "module",
   "scripts": {
