--- a/pixi.toml
+++ b/pixi.toml
@@ -1,7 +1,7 @@
 [project]
-name = "cycling-website"
+name = "gravly"
 version = "1.0.0"
-description = "Cycling routes website with GPX management"
+description = "Find your next gravel ride"
 channels = ["conda-forge"]
 platforms = ["osx-arm64", "osx-64", "linux-64"]
 
