--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -39,6 +39,9 @@ jobs:
           echo "STORAGE_TYPE=${{ secrets.STORAGE_TYPE }}" >> .env/storage
           echo "LOCAL_STORAGE_ROOT=${{ secrets.LOCAL_STORAGE_ROOT }}" >> .env/storage
           echo "LOCAL_STORAGE_BASE_URL=${{ secrets.LOCAL_STORAGE_BASE_URL }}" >> .env/storage
+          echo "STRAVA_CLIENT_ID=${{ secrets.STRAVA_CLIENT_ID }}" >> .env/strava
+          echo "STRAVA_CLIENT_SECRET=${{ secrets.STRAVA_CLIENT_SECRET }}" >> .env/strava
+          echo "STRAVA_TOKENS_FILE_PATH=${{ secrets.STRAVA_TOKENS_FILE_PATH }}" >> .env/strava
 
       - name: Setup database
         run: pixi run pg-setup
