--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "test:cov": "vitest --coverage"
   },
   "dependencies": {
+    "@types/leaflet-routing-machine": "^3.2.9",
     "axios": "^1.6.0",
     "chart.js": "^4.5.0",
     "chartjs-plugin-annotation": "^3.1.0",
     "leaflet": "^1.9.4",
+    "leaflet-routing-machine": "^3.2.12",
     "vue": "^3.3.8",
     "vue-chartjs": "^5.3.2",
     "vue-i18n": "^9.14.5",
