--- a/.env/thunderforest.example
+++ b/.env/thunderforest.example
@@ -1,4 +1,3 @@
-# Thunderforest API Key for OpenCycleMap tiles
-# Get your free API key from: https://www.thunderforest.com/maps/opencyclemap/
-# Copy this file to .env/thunderforest and add your actual API key
-THUNDERFOREST_API_KEY=your_api_key_here
+# Map service configuration
+# Get your API key from: https://www.thunderforest.com/api-docs/
+THUNDERFOREST_API_KEY=your_thunderforest_api_key_here
