--- a/.github/workflows/backend-tests.yml
+++ b/.github/workflows/backend-tests.yml
@@ -53,6 +53,17 @@ jobs:
       - name: Run backend tests with coverage
         run: |
           pixi run -e dev -- test-backend
+
+      - name: Upload backend coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./backend/coverage.xml
+          flags: backend
+          name: backend-coverage
+          fail_ci_if_error: true
+          verbose: true
+
       - name: Upload coverage summary
         if: always()
         run: |
