--- a/.github/workflows/frontend-tests.yml
+++ b/.github/workflows/frontend-tests.yml
@@ -34,6 +34,16 @@ jobs:
       - name: Run frontend unit tests with coverage
         run: pixi run -e dev -- test-frontend
 
+      - name: Upload frontend coverage to Codecov
+        uses: codecov/codecov-action@v5
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./frontend/coverage/lcov.info
+          flags: frontend
+          name: frontend-coverage
+          fail_ci_if_error: true
+          verbose: true
+
       - name: Upload coverage summary
         if: always()
         run: |
