--- a/.env/auth_users.example
+++ b/.env/auth_users.example
@@ -4,4 +4,4 @@
 # List of Strava user IDs authorized to access editor functionality
 # Format: comma-separated list of Strava user IDs (no spaces between IDs)
 # Example: 820773,123456,789012
-AUTHORIZED_STRAVA_USERS=some_ids
+export AUTHORIZED_STRAVA_USERS=some_ids
