--- a/pixi.toml
+++ b/pixi.toml
@@ -47,6 +47,7 @@ pre-commit = "*" # Git hooks framework
 [feature.tests.dependencies]
 pytest = "*"
 pytest-cov = "*"
+pytest-asyncio = "*"
 moto = "*"
 requests-mock = "*"
 
